--- a/mono-repo-nx/apps/poliverai/package.json
+++ b/mono-repo-nx/apps/poliverai/package.json
@@ -8,16 +8,18 @@
     "metro-config": "*",
     "react": "*",
     "react-native": "*",
+    "react-native-macos": "0.78.0",
     "react-native-svg": "*",
+    "react-native-worklets": "^0.6.0",
     "react-test-renderer": "*"
   },
-
   "devDependencies": {
     "@react-navigation/drawer": "^7.4.6",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-macos-init": "^2.1.3",
     "react-native-reanimated": "^4.1.2",
-    "react-native-screens": "^4.16.0",
-    "react-native-safe-area-context": "^5.6.1"
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0"
   },
   "scripts": {
     "android": "npx react-native run-android",
