chore: fix building
Former-commit-id: 9c0a7ad07fda7c88335aa59dd43fcfef92c0ad00

--- a/mono-repo-nx/nx.json
+++ b/mono-repo-nx/nx.json
@@ -38,8 +38,12 @@
         "podInstallTargetName": "pod-install",
         "runIosTargetName": "run-ios",
         "runAndroidTargetName": "run-android",
+        "runMacosTargetName": "run-macos",
+        "runWindowsTargetName": "run-windows",
         "buildIosTargetName": "build-ios",
         "buildAndroidTargetName": "build-android",
+        "buildMacosTargetName": "build-macos",
+        "buildWindowsTargetName": "build-windows",
         "syncDepsTargetName": "sync-deps"
       }
     },
