--- a/mono-repo-nx/package.json
+++ b/mono-repo-nx/package.json
@@ -3,49 +3,40 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "test": "nx test",
-    "test:watch": "nx test --watch",
-    "test:app": "cd apps/poliverai && npx jest --config jest.config.ts",
-
-    "lint": "nx lint",
-    "typecheck": "npx tsc -b --noEmit",
-
-    "start:web": "cd apps/poliverai && npx vite",
-    "website:dev": "cd apps/website && yarn dev",
-    "website:build": "cd apps/website && yarn build",
-    "website:preview": "cd apps/website && yarn preview",
-
-    "start:metro": "cd apps/poliverai && npx react-native start",
-    "start:android": "cd apps/poliverai && npx react-native run-android",
-    "start:ios": "cd apps/poliverai && npx react-native run-ios",
-
-    "run:android": "cd apps/poliverai && npx react-native run-android",
-    "run:ios": "cd apps/poliverai && npx react-native run-ios",
-    "run:macos": "cd apps/poliverai && npx react-native run-macos",
-    "run:windows": "cd apps/poliverai && npx react-native run-windows",
-
-    "start:macos": "cd apps/poliverai && npx react-native run-macos",
-    "start:windows": "cd apps/poliverai && npx react-native run-windows",
-    
-    "build:web:dev": "cd apps/poliverai && NODE_ENV=development npx vite build --outDir ../../dist/apps/poliverai/web-dev",
-    "build:web:release": "cd apps/poliverai && NODE_ENV=production npx vite build --outDir ../../dist/apps/poliverai/web",
-
-    "build:android:dev": "cd apps/poliverai && npx react-native run-android",
-    "build:ios:dev": "cd apps/poliverai && npx react-native run-ios",
-
-    "build:android:release": "cd apps/poliverai && echo \"Release builds require EAS or native toolchain (see README).\" && exit 1",
-    "build:ios:release": "cd apps/poliverai && echo \"Release builds require EAS or native toolchain (see README).\" && exit 1"
+    "test": "NX_DAEMON=false nx run-many --target=test --all",
+    "test:watch": "NX_DAEMON=false nx test --watch",
+    "test:app": "NX_DAEMON=false nx run @poliverai/poliverai:test",
+    "lint": "NX_DAEMON=false nx run-many --target=lint --all",
+    "typecheck": "NX_DAEMON=false nx run-many --target=typecheck --all",
+    "start:web": "NX_DAEMON=false nx run @poliverai/poliverai:serve",
+    "website:dev": "NX_DAEMON=false nx run website:dev",
+    "website:build": "NX_DAEMON=false nx run website:build",
+    "website:preview": "NX_DAEMON=false nx run website:preview",
+    "start:metro": "NX_DAEMON=false nx run @poliverai/poliverai:start",
+    "start:android": "NX_DAEMON=false nx run @poliverai/poliverai:run-android",
+    "start:ios": "NX_DAEMON=false nx run @poliverai/poliverai:run-ios",
+    "run:android": "NX_DAEMON=false nx run @poliverai/poliverai:run-android",
+    "run:ios": "NX_DAEMON=false nx run @poliverai/poliverai:run-ios",
+    "run:macos": "NX_DAEMON=false nx run @poliverai/poliverai:run-macos",
+    "run:windows": "NX_DAEMON=false nx run @poliverai/poliverai:run-windows",
+    "start:macos": "NX_DAEMON=false nx run @poliverai/poliverai:run-macos",
+    "start:windows": "NX_DAEMON=false nx run @poliverai/poliverai:run-windows",
+    "build:web:dev": "NX_DAEMON=false nx run @poliverai/poliverai:build --configuration=development",
+    "build:web:release": "NX_DAEMON=false nx run @poliverai/poliverai:build --configuration=production",
+    "build:android:dev": "NX_DAEMON=false nx run @poliverai/poliverai:run-android",
+    "build:ios:dev": "NX_DAEMON=false nx run @poliverai/poliverai:run-ios",
+    "build:android:release": "NX_DAEMON=false nx run @poliverai/poliverai:build-android --configuration=release",
+    "build:ios:release": "NX_DAEMON=false nx run @poliverai/poliverai:build-ios --configuration=release"
   },
   "private": true,
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@reduxjs/toolkit": "^1.9.5",
-    "react-redux": "^8.1.2",
-    "redux-persist": "^6.0.0",
     "@react-navigation/bottom-tabs": "^7.4.7",
+    "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/native": "^7.1.17",
-  "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/stack": "^7.4.8",
+    "@reduxjs/toolkit": "^1.9.5",
+    "clsx": "^1.2.1",
     "nativewind": "^4.2.1",
     "react": "19.1.1",
     "react-dom": "19.1.1",
@@ -54,9 +45,10 @@
     "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
-    "tailwindcss": "^3.4.17",
-    "clsx": "^1.2.1",
-    "tailwind-merge": "^1.14.0"
+    "react-redux": "^8.1.2",
+    "redux-persist": "^6.0.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
@@ -101,6 +93,7 @@
     "jest-util": "^30.0.2",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
+    "lottie-web": "^5.10.2",
     "metro-config": "~0.82.4",
     "metro-resolver": "~0.82.4",
     "nx": "21.5.3",
@@ -117,10 +110,7 @@
     "typescript-eslint": "^8.40.0",
     "vite": "^7.0.0",
     "vitest": "^3.0.0",
-    "lottie-web": "^5.10.2"
-  },
-  "optionalDependencies": {
-    "react-native-macos": "^0.69.0",
+    "react-native-macos": "0.78.0",
     "react-native-windows": "^0.72.0"
   },
   "recommended": {
