--- a/mono-repo-nx/apps/poliverai/package.json
+++ b/mono-repo-nx/apps/poliverai/package.json
@@ -8,10 +8,10 @@
     "metro-config": "*",
     "react": "*",
     "react-native": "*",
-    "react-native-macos": "0.78.0",
-    "react-native-svg": "*",
-    "react-native-worklets": "^0.6.0",
-    "react-test-renderer": "*"
+  "react-native-svg": "*",
+    "react-test-renderer": "*",
+    "react-native-macos": "*",
+    "react-native-windows": "*"
   },
   "devDependencies": {
     "@react-navigation/drawer": "^7.4.6",
@@ -19,7 +19,10 @@
     "react-native-macos-init": "^2.1.3",
     "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.16.0"
+    "react-native-screens": "^4.16.0",
+    "@react-native-community/cli": "20.0.0",
+    "@react-native-community/cli-platform-android": "20.0.0",
+    "@react-native-community/cli-platform-ios": "20.0.0"
   },
   "scripts": {
     "android": "npx react-native run-android",
