--- a/mono-repo-nx/apps/poliverai/package.json
+++ b/mono-repo-nx/apps/poliverai/package.json
@@ -8,24 +8,26 @@
     "metro-config": "*",
     "react": "*",
     "react-native": "*",
-  "react-native-svg": "*",
-    "react-test-renderer": "*",
     "react-native-macos": "*",
-    "react-native-windows": "*"
+    "react-native-svg": "*",
+    "react-native-windows": "*",
+    "react-native-worklets": "^0.5.0",
+    "react-test-renderer": "*"
   },
   "devDependencies": {
+    "@react-native-community/cli": "20.0.0",
+    "@react-native-community/cli-platform-android": "20.0.0",
+    "@react-native-community/cli-platform-ios": "20.0.0",
     "@react-navigation/drawer": "^7.4.6",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-macos-init": "^2.1.3",
     "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.16.0",
-    "@react-native-community/cli": "20.0.0",
-    "@react-native-community/cli-platform-android": "20.0.0",
-    "@react-native-community/cli-platform-ios": "20.0.0"
+    "react-native-screens": "^4.16.0"
   },
   "scripts": {
     "android": "npx react-native run-android",
-    "ios": "npx react-native run-ios"
+    "ios": "npx react-native run-ios",
+    "postinstall": "node ./scripts/restore-codegen-stubs.js"
   }
 }
