chore: git ignore remove pods and buidl

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,10 @@ local.properties
 .cxx/
 *.keystore
 !debug.keystore
+mono-repo-nx/patches/generated/android/gradle-generated/intermediates/cxx
+mono-repo-nx/patches/generated/android/gradle-generated/intermediates/merged_native_libs
+mono-repo-nx/patches/generated/android/gradle-generated/intermediates/stripped_native_libs
+
 
 # node.js logs
 npm-debug.log
@@ -76,6 +80,8 @@ yarn-error.log
 # Ruby / CocoaPods
 mono-repo-nx/apps/poliverai/macos/Pods
 mono-repo-nx/apps/poliverai/ios/Pods
+mono-repo-nx/patches/generated/macos/pods-build-scripts/Debug/*/Objects-normal/arm64/Binary
+mono-repo-nx/patches/generated/macos/pods-build-scripts/Debug/*/Objects-normal/arm64/x86_64
 # **/vendor/bundle/
 
 # Metro
