feat: add deploy docker and payments
Former-commit-id: 0d28e5e77b9b9835574da5571488d4395b5b0913

--- a/default/configs/settings.example.yaml
+++ b/default/configs/settings.example.yaml
@@ -15,3 +15,11 @@ verification:
 
 reports:
   output_dir: reports
+
+# Optional Google Cloud Storage settings
+gcs:
+  # Default bucket used by various helpers
+  bucket: "your-gcs-bucket-name"
+  # Specific buckets can override the default for chroma persistence and reports
+  chroma_bucket: "your-chroma-bucket"
+  reports_bucket: "your-reports-bucket"
