--- a/default/frontend/tsconfig.app.json
+++ b/default/frontend/tsconfig.app.json
@@ -24,9 +24,9 @@
     "noUncheckedSideEffectImports": true,
 
     /* Path mapping */
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./*"]
     }
   },
   "include": ["src"]
