chore: deploying start

--- a/.env.example
+++ b/.env.example
@@ -8,25 +8,31 @@ EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
 REPORTS_DIR=reports
 
 # Core
-POLIVERAI_ENVIRONMENT=
-POLIVERAI_LOG_LEVEL=
-POLIVERAI_API_PREFIX=
-POLIVERAI_REPORTS_DIR=
+POLIVERAI_ENVIRONMENT=development
+POLIVERAI_LOG_LEVEL=INFO
+POLIVERAI_API_PREFIX=/api/v1
+POLIVERAI_REPORTS_DIR=reports
 
 # RAG storage
-POLIVERAI_CHROMA_PERSIST_DIR=
-POLIVERAI_CHROMA_COLLECTION=
+POLIVERAI_CHROMA_PERSIST_DIR=./data/
+POLIVERAI_CHROMA_COLLECTION=poliverai
 
 # OpenAI (required for LLM-backed answers and judgments)
 POLIVERAI_OPENAI_API_KEY=
 # Optional if you use an OpenAI-compatible endpoint (e.g., a proxy)
-POLIVERAI_OPENAI_BASE_URL=
+POLIVERAI_OPENAI_BASE_URL=https://api.openai.com/v1
 
 # Models (defaults are fine)
-POLIVERAI_OPENAI_CHAT_MODEL=
-POLIVERAI_OPENAI_EMBEDDING_MODEL=
+POLIVERAI_OPENAI_CHAT_MODEL=gpt-4o-mini
+POLIVERAI_OPENAI_EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
 
 # UI (optional; only used if exported into the process env)
 # POLIVERAI_UI_HOST=127.0.0.1
 # PORT=8000
 # POLIVERAI_UI_API_BASE=http://127.0.0.1:8000/api/v1
+
+# POLIVERAI_UI_API_BASE=http://127.0.0.1:8000/api/v1
+
+STRIPE_SECRET_KEY=
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_WEBHOOK_SECRET=
