--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
-# Core
+pydantic-settings>=2.3
 python-dotenv==1.0.1
-fastapi==0.111.0
+# Align fastapi with pyproject and avoid older incompatible pin
+fastapi>=0.115,<1.0
 uvicorn==0.30.1
+pymongo>=4.0
+python-multipart>=0.0.7
+requests==2.32.3
+argon2-cffi>=21.3.0
+python-jose[cryptography]>=3.3.0
+PyYAML>=6.0
+chromadb==0.5.3
 streamlit==1.37.1
-pymongo==4.5.1
-
 
 # LLM & NLP
 openai==1.40.0
@@ -15,7 +21,6 @@ tiktoken==0.7.0
 
 # Vector DB
 faiss-cpu==1.8.0
-chromadb==0.5.3
 pinecone-client==3.2.2 # optional, if using Pinecone
 weaviate-client==4.6.4 # optional, if using Weaviate
 
@@ -26,7 +31,15 @@ numpy==1.26.4
 scikit-learn==1.5.1
 requests==2.32.3
 beautifulsoup4==4.12.3 # for scraping GDPR text
+python-docx==0.8.11 # provides `docx` module used by ingestion
 
+pdfplumber==0.9.0
+
+# protobuf constraint to satisfy google-cloud-aiplatform
+protobuf
+
+# Ensure python-docx is at least a modern release (0.8.11 is available on PyPI)
+python-docx
 
 # PDF Reports
 reportlab==4.2.0
@@ -36,3 +49,6 @@ reportlab==4.2.0
 pytest==8.2.2
 httpx==0.27.0
 stripe==5.0.0
+# rag==0.1.0
+# domain-models==0.1.0
+gradio==4.35.0
