fix ruff errors: refactor complex functions to reduce complexity
- Fix PLR0912 error in ingest_paths function by extracting helper functions
- Fix multiple PLR errors in _llm_judge_clause by breaking into smaller functions
- Fix PLW2901 loop variable overwriting issues
- Fix PLR errors in analyze_policy function by extracting logic into helpers

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,8 @@ POLIVERAI_OPENAI_BASE_URL=
 POLIVERAI_OPENAI_CHAT_MODEL=
 POLIVERAI_OPENAI_EMBEDDING_MODEL=
 
+GRADIO_BYPASS_AUTH=1
+
 # UI (optional; only used if exported into the process env)
 # POLIVERAI_UI_HOST=127.0.0.1
 # PORT=8000
