--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,6 +4,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.backend
+      args:
+        - FAST_DEV=true
     container_name: poliverai-backend
     env_file:
       - ./.env
