--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -20,6 +20,19 @@ server {
     proxy_set_header Connection $http_connection;
   }
 
+  # Also proxy auth endpoints at top-level (frontend sends requests to /auth/*)
+  # so they are routed to the backend's /auth/* router (which is mounted on the app at /auth).
+  location /auth/ {
+    proxy_pass http://backend:8000/auth/;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection $http_connection;
+  }
+
   # Socket.IO or websocket endpoints - proxy and support websocket upgrade
   location /socket.io/ {
     proxy_pass http://backend:8000/socket.io/;
@@ -48,6 +61,9 @@ server {
     add_header Cache-Control "no-cache";
     # disable nginx response buffering for SSE
     proxy_set_header X-Accel-Buffering "no";
+    # Increase timeouts for long-lived SSE connections
+    proxy_read_timeout 3600s;
+    proxy_send_timeout 3600s;
   }
 
   location ^~ /api/v1/verify-stream {
@@ -64,6 +80,9 @@ server {
     chunked_transfer_encoding on;
     add_header Cache-Control "no-cache";
     proxy_set_header X-Accel-Buffering "no";
+    # Increase timeouts for long-lived SSE connections
+    proxy_read_timeout 3600s;
+    proxy_send_timeout 3600s;
   }
 
   # In dev: proxy to Vite dev server running in a separate container at frontend_dev:5173
