--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -16,8 +16,9 @@ tiktoken==0.7.0
 chromadb==0.5.3
 openai==1.40.0
 stripe==5.0.0
-python-docx==0.8.11
+python-docx>=1.1
 gradio==4.35.0
 beautifulsoup4==4.12.3
-pdfplumber==0.9.0
+pdfplumber>=0.11
 reportlab==4.2.0
+google-cloud-storage==2.11.0
