--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,8 @@ POLIVERAI_OPENAI_EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
 STRIPE_SECRET_KEY=
 STRIPE_PUBLISHABLE_KEY=
 STRIPE_WEBHOOK_SECRET=
+
+POLIVERAI_GCS_CREDENTIALS_JSON=key.json
+POLIVERAI_CHROMA_GCS_BUCKET=poliverai-chroma
+POLIVERAI_REPORTS_GCS_BUCKET=poliverai-reports
+GOOGLE_APPLICATION_CREDENTIALS=./key.json
