--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -12,6 +12,11 @@ server {
   location /api/ {
     proxy_pass http://backend:8000/api/;
     proxy_http_version 1.1;
+    proxy_connect_timeout 10s;
+    proxy_send_timeout 120s;
+    proxy_read_timeout 120s;
+    proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+    proxy_next_upstream_tries 3;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -25,6 +30,11 @@ server {
   location /auth/ {
     proxy_pass http://backend:8000/auth/;
     proxy_http_version 1.1;
+    proxy_connect_timeout 10s;
+    proxy_send_timeout 120s;
+    proxy_read_timeout 120s;
+    proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+    proxy_next_upstream_tries 3;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -42,6 +52,8 @@ server {
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_connect_timeout 10s;
+    proxy_read_timeout 3600s;
   }
 
   # Server-Sent Events / Verify stream endpoint: proxy to backend and disable buffering
@@ -98,6 +110,13 @@ server {
     proxy_set_header Connection $http_connection;
     # If frontend_dev is not reachable, try to serve static files (production build)
     error_page 502 = /index.html;
+  }
+
+  # Friendly error page for upstream failures
+  error_page 502 503 504 /50x.html;
+  location = /50x.html {
+    root /usr/share/nginx/html;
+    internal;
   }
 }
 
