--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
+  "lottie-web": "^5.9.6",
+  "react-lottie-player": "^2.1.0",
     "phosphor-react": "^1.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
