db push back to atlas

--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,6 @@ POLIVERAI_GCS_CREDENTIALS_JSON=key.json
 POLIVERAI_CHROMA_GCS_BUCKET=poliverai-chroma
 POLIVERAI_REPORTS_GCS_BUCKET=poliverai-reports
 GOOGLE_APPLICATION_CREDENTIALS=./key.json
+
+# MongoDB Atlas connection string
+MONGO_URI=
