ci: exclude secrets from docker build; add deploy_to_gcp.sh and sentence-transformers; stream Cloud Run logs

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,16 @@
+# Ignore local secrets and environment files
+.env
+key.json
+/.git
+/.venv
+venv/
+__pycache__
+*.py[cod]
+node_modules
+frontend/node_modules
+dist
+build
+*.log
 .venv
 __pycache__
 *.pyc
