--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -23,3 +23,7 @@ pdfplumber>=0.11
 reportlab==4.2.0
 google-cloud-storage==2.11.0
 pymongo>=4.0
+# Optional: sentence-transformers is required for some embedding/semantic search features.
+# Note: this may pull in heavy dependencies (torch). If you want a CPU-only install, consider
+# pinning a cpu build of torch or installing sentence-transformers inside a separate dev venv.
+sentence-transformers
