--- a/requirements.docker.txt
+++ b/requirements.docker.txt
@@ -36,6 +36,7 @@ python-docx>=1.1 # provides `docx` module used by ingestion
 pdfplumber>=0.11
 
 # protobuf constraint to satisfy google-cloud-aiplatform
+# google-cloud-aiplatform requires protobuf>=3.19.5 and <5.0.0dev
 protobuf
 
 # Google Cloud Storage client (optional, needed for GCS report uploads)
@@ -57,3 +58,4 @@ stripe==5.0.0
 gradio==4.35.0
 email_validator
 pymongo>=4.0
+pyflakes
