--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dotlottie/player-component": "^2.7.12",
+    "@dotlottie/react-player": "^1.6.19",
     "@hookform/resolvers": "^5.2.2",
+    "@lottiefiles/dotlottie-react": "0.17.4",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
@@ -20,19 +23,17 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
-  "@reduxjs/toolkit": "^2.9.0",
+    "@reduxjs/toolkit": "^2.9.0",
     "@types/node": "^24.5.2",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lottie-web": "^5.9.6",
     "lucide-react": "^0.544.0",
     "phosphor-react": "^1.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.63.0",
-    "react-lottie-player": "^2.1.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^7.9.1",
     "redux-persist": "^6.0.0",
