--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ stripe==5.0.0
 # domain-models==0.1.0
 gradio==4.35.0
 email_validator
-pymongo>=4.0
+pymongo>=3.6.0
 pyflakes
 
 # Optional: sentence-transformers is required for some embedding/semantic search features.
@@ -66,3 +66,6 @@ pyflakes
 # transformers==4.44.0
 # sentence-transformers==3.0.1
 # ###
+
+
+cairosvg
