Missing code from main

--- a/.env.example
+++ b/.env.example
@@ -8,23 +8,24 @@ EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
 REPORTS_DIR=reports
 
 # Core
-POLIVERAI_ENVIRONMENT=
-POLIVERAI_LOG_LEVEL=
-POLIVERAI_API_PREFIX=
+POLIVERAI_ENVIRONMENT=development
+POLIVERAI_LOG_LEVEL=INFO
+POLIVERAI_API_PREFIX=/api/v1
+POLIVERAI_REPORTS_DIR=reports
 POLIVERAI_REPORTS_DIR=
 
 # RAG storage
-POLIVERAI_CHROMA_PERSIST_DIR=
-POLIVERAI_CHROMA_COLLECTION=
+POLIVERAI_CHROMA_PERSIST_DIR=data/chroma
+POLIVERAI_CHROMA_COLLECTION=poliverai
 
 # OpenAI (required for LLM-backed answers and judgments)
 POLIVERAI_OPENAI_API_KEY=
 # Optional if you use an OpenAI-compatible endpoint (e.g., a proxy)
-POLIVERAI_OPENAI_BASE_URL=
+POLIVERAI_OPENAI_BASE_URL=https://api.openai.com/v1
 
 # Models (defaults are fine)
-POLIVERAI_OPENAI_CHAT_MODEL=
-POLIVERAI_OPENAI_EMBEDDING_MODEL=
+POLIVERAI_OPENAI_CHAT_MODEL=gpt-4o-mini
+POLIVERAI_OPENAI_EMBEDDING_MODEL=text-embedding-3-large
 
 GRADIO_BYPASS_AUTH=1
 
@@ -32,3 +33,17 @@ GRADIO_BYPASS_AUTH=1
 # POLIVERAI_UI_HOST=127.0.0.1
 # PORT=8000
 # POLIVERAI_UI_API_BASE=http://127.0.0.1:8000/api/v1
+
+STRIPE_SECRET_KEY=
+
+STRIPE_PUBLISHABLE_KEY=
+
+STRIPE_WEBHOOK_SECRET=
+
+POLIVERAI_GCS_CREDENTIALS_JSON=key.json
+POLIVERAI_CHROMA_GCS_BUCKET=poliverai-chroma
+POLIVERAI_REPORTS_GCS_BUCKET=poliverai-reports
+GOOGLE_APPLICATION_CREDENTIALS=./key.json
+
+# MongoDB Atlas connection string
+MONGO_URI=
