fix: pdf design rendering

--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,4 @@ SKIP_NGINX=0
 # In development we still use http://localhost:8000 (the dev server).
 # Production value provided by user: https://poliverai-app-492258765757.us-central1.run.app
 VITE_API_URL=https://poliverai-app-492258765757.us-central1.run.app
+INSTALL_WEASY_DEPS=1
