--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -20,6 +20,7 @@ services:
       - POLIVERAI_GCS_CREDENTIALS_JSON=/app/key.json
       # Default user id used when no authenticated user is present (dev only)
       - POLIVERAI_DEFAULT_USER_ID=d8faff07-97cb-42c6-aa42-cc002ba4584f
+      - INSTALL_WEASY_DEPS=1
     ports:
       - "8000:8000"
     command: ["/opt/venv/bin/python", "-m", "uvicorn", "poliverai.app.main:app", "--reload", "--host", "0.0.0.0", "--port", "8000", "--app-dir", "/app/src"]
