--- a/mono-repo-nx/package.json
+++ b/mono-repo-nx/package.json
@@ -54,7 +54,28 @@
     "react-redux": "^8.1.2",
     "redux-persist": "^6.0.0",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "@dotlottie/player-component": "^2.7.12",
+    "@dotlottie/react-player": "^1.6.19",
+    "@hookform/resolvers": "^5.2.2",
+    "@lottiefiles/dotlottie-react": "0.17.4",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "axios": "^1.12.2",
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.544.0",
+    "phosphor-react": "^1.4.1",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.63.0",
+    "react-router-dom": "^7.9.1",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
@@ -88,12 +109,17 @@
     "@vitest/ui": "^3.0.0",
     "babel-jest": "^30.0.2",
     "eslint": "^9.8.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-playwright": "^1.6.2",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
+    "globals": "^16.4.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss-animate": "^1.0.7",
     "jest": "^30.0.2",
     "jest-environment-jsdom": "^30.0.2",
     "jest-util": "^30.0.2",
