--- a/mono-repo-nx/package.json
+++ b/mono-repo-nx/package.json
@@ -71,11 +71,14 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.544.0",
+    "lucide-react-native": "^0.544.0",
     "phosphor-react": "^1.4.1",
+    "phosphor-react-native": "^1.4.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.63.0",
     "react-router-dom": "^7.9.1",
-    "zod": "^4.1.11"
+    "zod": "^4.1.11",
+    "twrnc": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
